# espidf-eth-cam

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  sensor.php
data/: calstyle.css  index.html
main/: CMakeLists.txt  Kconfig.projbuild  eth_cam.c
tools/: convrgb.py  delprofile.php  getprofilelist.php  picsize.json  renprofile.php  sensorvalues.json  submit.php  tbl-useit.json  test_useit-useit.json  useit.php
